# RealWare

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
data/data/shaders/: transparent_fragment.shader
engine/: CMakeLists.txt
engine/src/: application.cpp  application.hpp  camera_manager.cpp  camera_manager.hpp  category.hpp  ecs.hpp  filesystem_manager.cpp  filesystem_manager.hpp  font_manager.cpp  font_manager.hpp  gameobject_features.hpp  gameobject_manager.cpp  gameobject_manager.hpp  id_vec.hpp  layer.hpp  log.hpp  memory_pool.cpp  memory_pool.hpp  physics_manager.cpp  physics_manager.hpp  render_context.hpp  render_context_gl.cpp  render_manager.cpp  render_manager.hpp  sound_context.hpp  sound_context_al.cpp  sound_manager.cpp  sound_manager.hpp  texture_manager.cpp  texture_manager.hpp  types.hpp  types2.hpp  user_input_manager.cpp  user_input_manager.hpp  widget_manager.cpp  widget_manager.hpp
exe_files/data/shaders/: custom_fragment.shader  custom_vertex.shader  main_fragment.shader  main_vertex.shader  opaque_fragment.shader  quad_fragment.shader  quad_vertex.shader  transparent_fragment.shader  transparent_vertex.shader
resources/: cube.fbx
samples/Editor/: CMakeLists.txt  editor_types.hpp  main.cpp  ray_hit.cpp  ray_hit.hpp
samples/Editor/winapi/: button.cpp  button.hpp  groupbox.cpp  groupbox.hpp  label.cpp  label.hpp  listview.cpp  listview.hpp  textbox.cpp  textbox.hpp  window.cpp  window.hpp
samples/HighPressure/: CMakeLists.txt  disclaimer.cpp  disclaimer.hpp  intro.cpp  intro.hpp  main.cpp  main_menu.cpp  main_menu.hpp
samples/Sample01/: CMakeLists.txt  main.cpp
